--- a/cepher.cabal
+++ b/cepher.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5, bytestring, split
+  build-depends:       base >= 4.7 && < 5, bytestring, split, influxdb
   default-language:    Haskell2010
 
 executable cepher-exe
